# leekwars

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  leekwars.library
bins/leek-dap/: Cargo.toml  README.md
bins/leek-dap/src/: main.rs
bins/leek-lsp/: Cargo.toml  README.md
bins/leek-lsp/src/: main.rs
bins/leekbench/: Cargo.toml  README.md
bins/leekbench/src/: cli.rs  main.rs
bins/leekc/: Cargo.toml  README.md
bins/leekc/src/: cli.rs  main.rs  pipeline.rs  print.rs  run.rs
bins/miku/: Cargo.toml  README.md
bins/miku/src/: cli.rs  main.rs  util.rs
bins/miku/src/cmd/: analyze.rs  build.rs  check.rs  clean.rs  completions.rs  dev.rs  doc.rs  explain.rs  fight.rs  fight_emit.rs  fix.rs  fmt.rs  lint.rs  lsp.rs  migrate.rs  mod.rs  new.rs  profile.rs  run.rs  test.rs
bins/miku/tests/: smoke.rs
crates/backends/leek-aot-runtime/: Cargo.toml
crates/backends/leek-aot-runtime/src/: lib.rs
crates/backends/leek-backend-interp/: Cargo.toml
crates/backends/leek-backend-interp/src/: lib.rs  profiler.rs
crates/backends/leek-backend-interp/src/interp/: call.rs  class.rs  exec.rs  mod.rs  value.rs
crates/backends/leek-backend-interp/tests/: lambda.rs  prelude.rs  profiler.rs  real_min_value.rs
crates/backends/leek-backend-java/: Cargo.toml
crates/backends/leek-backend-java/src/: builtins.rs  lib.rs  mangle.rs  options.rs  writer.rs
crates/backends/leek-backend-java/src/emit/: call.rs  class.rs  expr.rs  lambda.rs  literals.rs  mod.rs  stmt.rs  switch.rs  traits.rs
crates/backends/leek-backend-java/tests/: emit_scratch.rs  parity.rs  smoke.rs
crates/backends/leek-backend-java/tests/snapshots/: 01_literals.clean-vs-exact.diff  01_literals.exact.diff  02_arithmetic.clean-vs-exact.diff  02_arithmetic.exact.diff  (+21 more)
crates/backends/leek-backend-native/: Cargo.toml
crates/backends/leek-backend-native/src/: aot.rs  aot_meta.rs  debug.rs  game.rs  lib.rs  options.rs  runtime.rs
crates/backends/leek-backend-native/tests/: builtin_coverage.rs  byref_cells.rs  class_reflection.rs  classref_ctor_thunk.rs  dbg_safepoint.rs  dynamic_method_dispatch.rs  enum_exec.rs  extends_builtin.rs  jit.rs  lambda_byref_noop.rs  op_counting.rs  ops_scratch.rs  real_bitwise.rs  string_display_override.rs  union_field_access.rs  v1_byref_inplace.rs  v1_indirect_byref_cells.rs
crates/backends/leek-backends/: Cargo.toml
crates/backends/leek-backends/src/: lib.rs  linked.rs
crates/core/leek-diagnostics/: Cargo.toml  build.rs  catalog.yaml
crates/core/leek-diagnostics/explain/: E0001.md  E0002.md  E0003.md  E0004.md  E0010.md  E0011.md  E0012.md  E0100.md  E0200.md  E0202.md  E0210.md  E0211.md  E0212.md  E0220.md  E0221.md  E0222.md  E0230.md  E0231.md  E0240.md  E0241.md  E0242.md  E0243.md  E0244.md  E0245.md  E0246.md  E0247.md  E0248.md  E0249.md  E0250.md  E0251.md  E0252.md  E0253.md  E0254.md  E0255.md  E0256.md  E0257.md  E0258.md  E0260.md  E0261.md  E0262.md  (+59 more)
crates/core/leek-diagnostics/src/: convert.rs  lib.rs  render.rs  report.rs  serde_impls.rs  suggest.rs
crates/core/leek-manifest/: Cargo.toml
crates/core/leek-manifest/src/: discover.rs  format.rs  lib.rs  parse.rs  types.rs
crates/core/leek-prelude/: Cargo.toml
crates/core/leek-prelude/src/: leekwars.leek  lib.rs  prelude.leek  stdlib.leek
crates/core/leek-project/: Cargo.toml
crates/core/leek-project/src/: index.rs  lib.rs
crates/core/leek-runtime/: Cargo.toml
crates/core/leek-runtime/src/: builtin.rs  convert.rs  eval.rs  host.rs  lib.rs  rng.rs
crates/core/leek-runtime/tests/: builtin_known_consistency.rs  numeric_edge_cases.rs  numeric_safety.rs
crates/core/leek-span/: Cargo.toml
crates/core/leek-span/src/: lib.rs
crates/db/leek-driver/: Cargo.toml
crates/db/leek-driver/src/: lib.rs
crates/db/leek-pipeline/: Cargo.toml
crates/db/leek-pipeline/examples/: auto_recipe.rs  custom_step.rs  timed_pipeline.rs
crates/db/leek-pipeline/src/: adapters.rs  combinators.rs  context.rs  lib.rs  macros.rs  pipeline.rs  project.rs  recipe.rs  salsa.rs  timed.rs
crates/db/leek-recipes/: Cargo.toml
crates/db/leek-recipes/src/: lib.rs
crates/frontend/leek-lexer/: Cargo.toml
crates/frontend/leek-lexer/src/: comments.rs  idents.rs  lib.rs  numbers.rs  operators.rs  pipeline.rs  strings.rs
crates/frontend/leek-parser/: Cargo.toml
crates/frontend/leek-parser/fuzz/: Cargo.toml
crates/frontend/leek-parser/src/: ast.rs  lib.rs  parser.rs  pipeline.rs
crates/frontend/leek-parser/tests/: fuzz_roundtrip.rs  parse.rs  recursion_guard.rs  snapshots.rs
crates/frontend/leek-syntax/: Cargo.toml
crates/frontend/leek-syntax/src/: doc.rs  kind.rs  language.rs  lib.rs  pipeline.rs  pragma.rs  token.rs  version.rs
crates/game/leek-game-runtime/: Cargo.toml
crates/game/leek-game-runtime/src/: actions.rs  attack.rs  builtins.rs  chips.rs  chips_gen.rs  effect.rs  entity.rs  fight.rs  host.rs  lib.rs  map.rs  official_builtins.rs  order.rs  outcome.rs  rng.rs  state.rs  weapons.rs  weapons_gen.rs
crates/game/leek-game-runtime/tests/: official_goldens.rs
crates/game/leek-generator/: Cargo.toml
crates/game/leek-generator/src/: lib.rs  official.rs
crates/game/leek-generator/tests/: fight.rs
crates/game/leek-scenario/: Cargo.toml
crates/game/leek-scenario/src/: build_gen.rs  include.rs  lib.rs  load.rs  merge.rs  schema.rs  testing.rs
crates/game/leek-scenario/tests/: conformance.rs  scenario.rs
crates/middle/leek-charge/: Cargo.toml
crates/middle/leek-charge/src/: cost.rs  lib.rs  opts.rs  pipeline.rs  walk.rs
crates/middle/leek-complexity/: Cargo.toml
crates/middle/leek-complexity/src/: analyze.rs  big_o.rs  call_graph.rs  cost_expr.rs  lib.rs  loop_bound.rs
crates/middle/leek-complexity/tests/: empirical.rs  end_to_end.rs
crates/middle/leek-hir/: Cargo.toml
crates/middle/leek-hir/src/: ir.rs  lib.rs  pipeline.rs  transform.rs  visit.rs
crates/middle/leek-hir/tests/: enum_lowering.rs  library_headers.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parse_roundtrip.rs
fuzz/seeds/parse_roundtrip/: seed_basic.leek  seed_interval.leek
(+647 files in other folders)
