[package]
name        = "leek-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Miku.toml manifest schema, parser, and project discovery for Leekscript."

[dependencies]
leek-diagnostics = { workspace = true }
leek-span        = { workspace = true }
toml             = { version = "0.8", default-features = false, features = ["parse"] }

[lints]
workspace = true
