[package]
name        = "leek-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime value types and display for Leekscript."

[dependencies]
leek-hir = { workspace = true }
# Op-cost / batch-multiplier catalog for the builtins (a pure data crate
# with no leek dependencies of its own).
leek-builtins = { workspace = true }
# Arbitrary-precision integers (`2L` big_integer literals & arithmetic).
num-bigint = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
