[package]
name        = "leek-span"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Source positions, spans, and line tables for Leekscript."

[dependencies]
salsa = { version = "0.26", optional = true }

[features]
default = []
# Adds `salsa::Update` derives on the public types so they can cross
# a tracked-query return boundary. Off by default — enable on the LSP
# / `miku watch` build path.
salsa = ["dep:salsa"]

[lints]
workspace = true
