[package]
name        = "leek-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Token kinds, syntax-tree kinds, and Version enum for Leekscript."

[dependencies]
leek-span        = { workspace = true }
leek-diagnostics = { workspace = true }
leek-pipeline    = { workspace = true }
rowan            = { workspace = true }
salsa            = { version = "0.26", optional = true }

[features]
default = []
# Adds `salsa::Update` derives to `Token`, `SyntaxKind`, `Version`,
# and `Pragmas` so they can cross a tracked-query return boundary.
# Pulls the same feature from `leek-span` / `leek-diagnostics` so the
# transitively-reached types also have derives.
salsa = ["dep:salsa", "leek-pipeline/salsa", "leek-span/salsa", "leek-diagnostics/salsa"]

[lints]
workspace = true
