[package]
name        = "leek-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Leek-wars fight orchestrator: launches AIs, runs the turn loop, and bridges game builtins into native execution (the leek-wars-generator equivalent). The world model lives in leek-game-runtime."

[dependencies]
leek-game-runtime   = { workspace = true }
leek-backend-native = { workspace = true }
leek-runtime        = { workspace = true }
leek-hir            = { workspace = true }

[dev-dependencies]
leek-parser = { workspace = true }
leek-syntax = { workspace = true }
leek-span   = { workspace = true }

[lints]
workspace = true
